# stitch

./: .gitignore  Cargo.toml  README.md  example.sh  example.stitchspec
.cargo/: config.toml
src/: env.rs  execute.rs  ffmpeg.rs  ffprobe.rs  limits.rs  logging.rs  main.rs  parse.rs  path.rs
