[package]
name = "stitch"
authors = ["Charlie Thomson <charlie@thmsn.dev>"]
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.16"
tracing = { version = "0.1.41", features = ["valuable"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
valuable = { version = "0.1.1", features = ["derive"] }
liberror = { git = "https://github.com/charliethomson/liberror" }
clap = { version = "4.5.50", features = ["derive", "env"] }
regex = "1.12.2"
lazy_static = "1.5.0"
anyhow = "1.0.100"
uuid = { version = "1.18.1", features = ["v4"] }
crossterm = "0.29.0"
dirs = "6.0.0"
strum = { version = "0.27.2", features = ["derive"] }
